# antijob_bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  antijob_bot.service  compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: deployment.yml
src/antijob_bot/: __main__.py  config.py  context.py  conversations.py  database.py  logging.py  menu.py
src/antijob_bot/callbacks/: __init__.py  broadcast.py  feedback.py  start.py  statistics.py
